# transaction-transformer

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md
.github/workflows/: black.yml  build.yml  flake8.yml  pylint.yml  test.yml
src/: bindings.rs  lib.rs  main.py  matcher.py  matcher.rs  matcher_test.py  reader.py  reader.rs  reader_test.py  transaction.py  transaction.rs  ui.rs  writer.py  writer.rs  writer_test.py
src/matcher/: score.rs  tests.rs
src/ui/: js.rs  string.rs  terminal.rs
